<resources>
    <string name="app_name">Photo Rally</string>
    <string name="title_activity_contest">ContestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Admin Dashboard</string>
    <string name="title_notifications">Sign Up</string>
    <string name="title_gallery">Gallery</string>
    <string name="contest_description">Description example placeholder</string>
    <string name="contest_closes_in">Contest closes in</string>
    <string name="contest_title">Contest title placeholder</string>
    <string name="view_details_title">View Details</string>
    <string name="submission_deadline_title">Submission deadline:</string>
    <string name="submission_deadline">30/10/2023</string>
    <string name="voting_deadline_title">Voting deadline:</string>
    <string name="voting_deadline">4/11/2023</string>
    <string name="vote_title">Vote</string>
    <string name="add_photo">Upload photo</string>
    <string name="photo_title">Photo title</string>
    <string name="photo_description">Description</string>
    <string name="contest_input_hint">Contest\n</string>
    <string name="select_image_input">Select image...</string>
    <string name="upload_photo_button">Upload photo</string>
    <string name="validate_photo_button">Validate</string>
    <string name="delete_photo_button">Delete</string>
    <string name="edit_user_button">Edit</string>
    <string name="username_edit_text_error">User already exists</string>
    <string name="password_edit_text_error">Must contain 8 characters, a (.) or (,) and a number (1-9)</string>
    <string name="username_empty_error">Username is mandatory</string>
    <string name="mail_empty_error">E-mail is mandatory</string>
    <string name="mail_not_valid_error">E-mail is not valid</string>
    <string name="password_empty_error">Password is mandatory</string>
    <string name="terms_not_accepted_error">You must accept terms and conditions</string>
    <string name="notification_error_title">ERROR</string>
    <string name="notification_info_title">INFO</string>
    <string name="notification_succeeded_title">SUCCEEDED</string>
    <string name="notification_user_created_body">User created. Logging in...</string>
    <string name="notification_user_successfully_auth_body">User authenticated correctly</string>
    <string name="notification_error_authenticating_user_body">Invalid credentials</string>
    <string name="notification_error_updating_user_body">Error updating user information. Please check the data is valid.</string>
    <string name="notification_error_updating_contest_body">Error updating contest information</string>
    <string name="notification_error_creating_user_body">API error received creating user</string>
    <string name="notification_unexpected_error_body">Unexpected error received</string>
    <string name="notification_error_getting_photos">Error getting photos</string>
    <string name="notification_error_getting_contest">Error getting contest info</string>
    <string name="notification_error_getting_contest_deadline">Error getting contest deadline</string>
    <string name="notification_error_getting_voting_deadline">Error getting voting deadline</string>
    <string name="notification_error_getting_contest_name">Error getting contest name</string>
    <string name="notification_error_voting">Error when voting</string>
    <string name="notification_error_getting_users">Error getting users</string>
    <string name="manage_group_button">Manage groups</string>
    <string name="manage_group_title">Manage existing groups or create new ones</string>
    <string name="group_name_input_hint">IE: operators</string>
    <string name="create_new_group_button">Create new group</string>
    <string name="update_group_button">Update group</string>
    <string name="delete_group_button">Delete group</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_exit_button">Exit</string>

    <string name="edit_user_title">Manage user data and information</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="save_user_button">Save</string>
    <string name="delete_user_button">Delete</string>
    <string name="manage_roles_button">Manage user roles</string>
    <string name="reset_password_button">Reset password</string>
    <string name="notification_error_deleting_user_body">Error deleting user. Maybe you are not admin</string>
    <string name="notification_error_retrieving_roles_body">Error retrieving roles</string>
    <string name="notification_ok_deleting_user_body">User deleted successfully</string>
    <string name="notification_error_getting_description">Error getting description</string>
    <string name="notification_error_updating_roles">Error updating roles. Maybe you are not admin</string>
    <string name="notification_ok_updating_roles">Role assigned correctly</string>

    <string name="edit_contest_title">Manage contest data and information</string>
    <string name="contest_name_hint">Contest name</string>
    <string name="contest_description_hint">Contest description here</string>
    <string name="upload_photo_title">Upload photo</string>
    <string name="upload_photo">Upload</string>
    <string name="notification_warn_select_photo">Select a photo to upload</string>
    <string name="notification_error_procesing_photos">Error processing photos</string>
    <string name="notification_ok_uploading_photo">Photo uploaded</string>
    <string name="notification_error_getting_role_id">Error getting role id</string>
    <string name="number_of_votes_subtitle">"Number of votes: "</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_hint">End Date</string>
    <string name="voting_start_date_hint">Voting Start Date</string>
    <string name="voting_end_date_hint">Voting End Date</string>
    <string name="maximun_number_of_photos_per_user_hint">Maximun number of photos per user</string>
    <string name="users_title">Users</string>
    <string name="submitted_photos_title">Submitted Photos</string>
    <string name="by_subtitle">By</string>
    <string name="app_description">Join the photography rally and capture stunning moments!</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="log_in_subtitle">Log in to upload photos and vote!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">I agree with Terms and Conditions</string>
    <string name="register_link_text">Need to register? Click here</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account_subtitle">Create your account to start participating</string>
    <string name="your_email_address">Your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register now</string>
    <string name="log_in_link">Already registered? Log In</string>
    <string name="role">Role</string>
    <string name="action">Action</string>
    <string name="assign">Assign</string>


</resources>