<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <EditText
        android:id="@+id/inputGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_name_input_hint" />

    <Spinner
        android:id="@+id/groupSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contest_input_hint" />

    <Button
        android:id="@+id/buttonCreateNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_group_button"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonUpdateExistingGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_group_button"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/buttonDeleteGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_group_button"
        android:layout_marginTop="24dp" />

</LinearLayout>
