<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/inputTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/photo_title" />

    <Spinner
        android:id="@+id/inputContest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contest_input_hint" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image_input"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <Button
        android:id="@+id/buttonUploadPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo_button"
        android:layout_marginTop="24dp" />

</LinearLayout>
