<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contest_name_hint" />

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contest_description_hint"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_date_hint"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_voting_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voting_start_date_hint"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_voting_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_voting_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/voting_end_date_hint"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_voting_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/maxPhotoPerUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maximun_number_of_photos_per_user_hint" />

        <Button
            android:id="@+id/buttonSaveContest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_user_button"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
