<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvContestTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contest_title"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvCountdownLabel"/>

    <TextView
        android:id="@+id/tvCountdownLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contest_closes_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvContestTitle"/>

    <TextView
        android:id="@+id/tvCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:10:00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountdownLabel"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contest_description"
        app:layout_constraintTop_toBottomOf="@+id/tvCountdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/submission_deadline_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/submission_deadline_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <TextView
        android:id="@+id/submission_deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submission_deadline"
        app:layout_constraintTop_toBottomOf="@+id/submission_deadline_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"/>

    <TextView
        android:id="@+id/voting_deadline_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/voting_deadline_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submission_deadline" />

    <TextView
        android:id="@+id/voting_deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voting_deadline"
        app:layout_constraintTop_toBottomOf="@+id/voting_deadline_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerPhotos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/voting_deadline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:paddingTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
